--- a/20NEWSGROUP_multinomial_naive_bayes/multinomial-Naive-Bayes.ipynb
+++ b/20NEWSGROUP_multinomial_naive_bayes/multinomial-Naive-Bayes.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Aut"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Text classification using Multinomial Naive Bayes on 20newsgroup"
    ]
   },
@@ -48,10 +55,10 @@
     "- ``Likelihood``: Multinomials $p^1 = (p_{11},...,p_{1|V|})$, ... , $p^k = (p_{k1},...,p_{j|V|})$\n",
     "\n",
     "#### Classifying document x by ``MAP estimator``:\n",
-    "$$\\underset{j}{\\operatorname{argmax}} \\pi_j \\Pi^{|V|}_{i=1} P_{ji}^{X_i}$$\n",
+    "<div align=\"center\">$\\underset{j}{\\operatorname{argmax}} \\pi_j \\Pi^{|V|}_{i=1} P_{ji}^{X_i}$</div>\n",
     "equals to:\n",
     "\n",
-    "$$\\underset{j}{\\operatorname{argmax}} log(\\pi_j)+\\sum^{|V|}_{i}X_i \\cdot log P_j(X_i)$$"
+    "<div align=\"center\">$\\underset{j}{\\operatorname{argmax}} log(\\pi_j)+\\sum^{|V|}_{i}X_i \\cdot log P_j(X_i)$</div>"
    ]
   },
   {
@@ -79,7 +86,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <div align=\"center\"> Data Flows:</div>\n",
+    "## Data Flows:\n",
     "\n",
     "\n",
     " 1. Load training/testing data into DataFrame\n",
@@ -606,114 +613,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True])"
-      ]
-     },
-     "execution_count": 93,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#checking deeper\n",
-    "X_train[0][X_train[0]!=0] == data[data.docIdx==1].Count.values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [
@@ -807,45 +706,6 @@
     "#checking the matrix correctly reflects dataframe's values\n",
     "print(np.unique(X_test[0]))\n",
     "print(np.unique(test[test.docIdx==1].Count))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-       "        True])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#checking deeper\n",
-    "X_test[0][X_test[0]!=0] == test[test.docIdx==1].Count.values"
    ]
   },
   {
@@ -1121,7 +981,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Step 4: Estimate $\\underset{j}{\\operatorname{argmax}} log(\\pi_j)+\\sum^{|V|}_{i}X_i* log P_j(X_i)$"
+    "### Step 4: Estimate \n",
+    "<div align=\"center\">$\\underset{j}{\\operatorname{argmax}} log(\\pi_j)+\\sum^{|V|}_{i}X_i* log P_j(X_i)$</div>"
    ]
   },
   {
@@ -1789,7 +1650,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
