--- a/Word_Embeddings/word_embeddings.ipynb
+++ b/Word_Embeddings/word_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "05c0857e",
+   "id": "98fca48b",
    "metadata": {},
    "source": [
     "# Word Embeddings\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccdd93c8",
+   "id": "7b3ef817",
    "metadata": {},
    "source": [
     "### Prepare data\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "1f3b0bc1",
+   "id": "08fa475d",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43a91437",
+   "id": "b33387af",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baa31943",
+   "id": "6e750a22",
    "metadata": {},
    "source": [
     "## (a) Walk-through of 100-dimensional embeddings"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2da2c6f1",
+   "id": "d87e960a",
    "metadata": {},
    "source": [
     "### Lowercase and Remove stopwords, punctuation\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3f851680",
+   "id": "75aee501",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "daf96010",
+   "id": "6870c72e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "970758ef",
+   "id": "75a0d610",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3ffa17d",
+   "id": "e9778843",
    "metadata": {},
    "source": [
     "### Generate `vocabulary V` and `shorter list C`"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6a75144e",
+   "id": "e418ba8c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a8b25960",
+   "id": "842f6b5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "81425c0d",
+   "id": "f5119b1f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3b22196",
+   "id": "efb5fd91",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4251f398",
+   "id": "150e06a7",
    "metadata": {},
    "source": [
     "For each word $w \\in V$, and each occurrence of it in the text stream, look at the surrounding window of four words (two before, two after):\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60478b7e",
+   "id": "9fedbbdf",
    "metadata": {},
    "source": [
     "### Calculate `Pr(c|w)`"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "954e9bea",
+   "id": "56ef8ad0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "68533b2b",
+   "id": "e6e0e38e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "3483224f",
+   "id": "7fa4a706",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "398b59d7",
+   "id": "42915dbc",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56e45ecc",
+   "id": "49b2ef0a",
    "metadata": {},
    "source": [
     "### Calculate `Pr(c)`"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a27910bb",
+   "id": "4d5b75f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "b9bac40c",
+   "id": "0f50d5fe",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df6135ba",
+   "id": "2c7b5808",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d134abf8",
+   "id": "22e8efb3",
    "metadata": {},
    "source": [
     "Represent each vocabulary item $w$ by a $|C|$-dimensional vector $\\phi(w)$, whose $c$’th coordinate is:\n",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f898f93e",
+   "id": "07b64d9b",
    "metadata": {},
    "source": [
     "### Calculate `pointwise mutual information`"
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b4d749c6",
+   "id": "b5409bfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "c2deef3b",
+   "id": "9d26fb65",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7011197",
+   "id": "c787bfa9",
    "metadata": {},
    "source": [
     "### Dimension Reduction\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2d62c09b",
+   "id": "0a8693ff",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ea09af7",
+   "id": "ddd9c719",
    "metadata": {},
    "source": [
     "#### Here, we will be doing `Singular Value Decomposition`(SVD) to decompose the above sparse matrix to 100 dimension word representation."
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "4a4feede",
+   "id": "1a9a313e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,8 +1349,10 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "27733e0c",
-   "metadata": {},
+   "id": "6e8a42c0",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1771,7 +1773,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3fd8a684",
+   "id": "c8d91026",
+   "metadata": {},
+   "source": [
+    "$\\left\\Vert kk\\right\\Vert$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be2104ce",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -1779,19 +1789,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49a2d3ec",
+   "id": "87a988a5",
    "metadata": {},
    "source": [
     "## (b) `Nearest neighbor results`\n",
     "\n",
     "Pick a collection of $25$ words $w \\in V$.  For each $w$, return its nearest neighbor $w′\\neq w$ in $V$.  A popular distance measure to use for this is cosine distance:\n",
-    "<div align=\"center\">$1−\\frac{\\phi(w)·\\phi(w′)}{‖\\phi(w)‖‖\\phi(w′)‖}$</div>"
+    "<div align=\"center\">$1−\\frac{\\phi(w) \\dot \\phi(w′)}{\\left\\Vert\\phi(w)\\right\\Vert \\left\\Vert\\phi(w′)\\right\\Vert}$</div>"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "707380f1",
+   "id": "506229f6",
    "metadata": {},
    "outputs": [
     {
@@ -2210,7 +2220,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "8a497b45",
+   "id": "b56bd40c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2222,7 +2232,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "f73cce44",
+   "id": "862810da",
    "metadata": {},
    "outputs": [
     {
@@ -2257,7 +2267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68864e23",
+   "id": "6acfe506",
    "metadata": {},
    "source": [
     "As we can see from above, some of the nearest neighbors do make sense, like `cigarette -> smelled`, `africa -> asia`, `september -> december`,  `dictionary -> text` and `storm -> summer`."
