--- a/Word_Embeddings/word_embeddings.ipynb
+++ b/Word_Embeddings/word_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "98fca48b",
+   "id": "4cf31f1b",
    "metadata": {},
    "source": [
     "# Word Embeddings\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3ef817",
+   "id": "36e6c651",
    "metadata": {},
    "source": [
     "### Prepare data\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "08fa475d",
+   "id": "dd7ae86d",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b33387af",
+   "id": "8ba8d926",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e750a22",
+   "id": "4049d231",
    "metadata": {},
    "source": [
     "## (a) Walk-through of 100-dimensional embeddings"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d87e960a",
+   "id": "c9d1cc21",
    "metadata": {},
    "source": [
     "### Lowercase and Remove stopwords, punctuation\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75aee501",
+   "id": "8ffe9621",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6870c72e",
+   "id": "dab622ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75a0d610",
+   "id": "09b3ef9d",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9778843",
+   "id": "51371e34",
    "metadata": {},
    "source": [
     "### Generate `vocabulary V` and `shorter list C`"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e418ba8c",
+   "id": "d4112448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "842f6b5e",
+   "id": "10444e4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f5119b1f",
+   "id": "a8628daa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efb5fd91",
+   "id": "5059f299",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "150e06a7",
+   "id": "af1f36d9",
    "metadata": {},
    "source": [
     "For each word $w \\in V$, and each occurrence of it in the text stream, look at the surrounding window of four words (two before, two after):\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9fedbbdf",
+   "id": "aab3bf7c",
    "metadata": {},
    "source": [
     "### Calculate `Pr(c|w)`"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "56ef8ad0",
+   "id": "2a35de9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e6e0e38e",
+   "id": "a4cca244",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "7fa4a706",
+   "id": "68c8c155",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "42915dbc",
+   "id": "e4d3c555",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "49b2ef0a",
+   "id": "3540cd90",
    "metadata": {},
    "source": [
     "### Calculate `Pr(c)`"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4d5b75f6",
+   "id": "cc18e9a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "0f50d5fe",
+   "id": "9c472a7f",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c7b5808",
+   "id": "fdf13d65",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22e8efb3",
+   "id": "00a306ad",
    "metadata": {},
    "source": [
     "Represent each vocabulary item $w$ by a $|C|$-dimensional vector $\\phi(w)$, whose $c$’th coordinate is:\n",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07b64d9b",
+   "id": "aca79969",
    "metadata": {},
    "source": [
     "### Calculate `pointwise mutual information`"
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b5409bfb",
+   "id": "059b14b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "9d26fb65",
+   "id": "30ddd81c",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c787bfa9",
+   "id": "20439362",
    "metadata": {},
    "source": [
     "### Dimension Reduction\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "0a8693ff",
+   "id": "4f73fb76",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddd9c719",
+   "id": "4530291c",
    "metadata": {},
    "source": [
     "#### Here, we will be doing `Singular Value Decomposition`(SVD) to decompose the above sparse matrix to 100 dimension word representation."
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1a9a313e",
+   "id": "36dfd5f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "6e8a42c0",
+   "id": "fd3b7885",
    "metadata": {
     "scrolled": true
    },
@@ -1773,15 +1773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d91026",
-   "metadata": {},
-   "source": [
-    "$\\left\\Vert kk\\right\\Vert$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "be2104ce",
+   "id": "cf1bd4b1",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -1789,19 +1781,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87a988a5",
+   "id": "bb7651e4",
    "metadata": {},
    "source": [
     "## (b) `Nearest neighbor results`\n",
     "\n",
     "Pick a collection of $25$ words $w \\in V$.  For each $w$, return its nearest neighbor $w′\\neq w$ in $V$.  A popular distance measure to use for this is cosine distance:\n",
-    "<div align=\"center\">$1−\\frac{\\phi(w) \\dot \\phi(w′)}{\\left\\Vert\\phi(w)\\right\\Vert \\left\\Vert\\phi(w′)\\right\\Vert}$</div>"
+    "$$1−\\frac{\\phi(w) \\dot \\phi(w′)}{\\left\\Vert\\phi(w)\\right\\Vert \\left\\Vert\\phi(w′)\\right\\Vert}$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "506229f6",
+   "id": "b24128ec",
    "metadata": {},
    "outputs": [
     {
@@ -2220,7 +2212,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "b56bd40c",
+   "id": "c3a3d56b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2232,7 +2224,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "862810da",
+   "id": "ca766aa9",
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2259,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6acfe506",
+   "id": "fbe99988",
    "metadata": {},
    "source": [
     "As we can see from above, some of the nearest neighbors do make sense, like `cigarette -> smelled`, `africa -> asia`, `september -> december`,  `dictionary -> text` and `storm -> summer`."
