--- a/Word_Embeddings/word_embeddings.ipynb
+++ b/Word_Embeddings/word_embeddings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4cf31f1b",
+   "id": "ea8a783d",
    "metadata": {},
    "source": [
     "# Word Embeddings\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "36e6c651",
+   "id": "31bc0a40",
    "metadata": {},
    "source": [
     "### Prepare data\n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dd7ae86d",
+   "id": "7bc6dcd0",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ba8d926",
+   "id": "d2122ef3",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4049d231",
+   "id": "fd0f0446",
    "metadata": {},
    "source": [
     "## (a) Walk-through of 100-dimensional embeddings"
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9d1cc21",
+   "id": "aaa2d4af",
    "metadata": {},
    "source": [
     "### Lowercase and Remove stopwords, punctuation\n",
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8ffe9621",
+   "id": "6a2070ee",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dab622ce",
+   "id": "b35d19d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "09b3ef9d",
+   "id": "39983702",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51371e34",
+   "id": "d050d98c",
    "metadata": {},
    "source": [
     "### Generate `vocabulary V` and `shorter list C`"
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d4112448",
+   "id": "54be3a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "10444e4b",
+   "id": "1aba517a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a8628daa",
+   "id": "5d7e776d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5059f299",
+   "id": "18842b8a",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af1f36d9",
+   "id": "789025de",
    "metadata": {},
    "source": [
     "For each word $w \\in V$, and each occurrence of it in the text stream, look at the surrounding window of four words (two before, two after):\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab3bf7c",
+   "id": "d497916d",
    "metadata": {},
    "source": [
     "### Calculate `Pr(c|w)`"
@@ -223,7 +223,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2a35de9e",
+   "id": "8d8a3f3c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a4cca244",
+   "id": "68773031",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +273,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "68c8c155",
+   "id": "9120aedc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "e4d3c555",
+   "id": "3fc40d6a",
    "metadata": {},
    "outputs": [
     {
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3540cd90",
+   "id": "6a772ad0",
    "metadata": {},
    "source": [
     "### Calculate `Pr(c)`"
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cc18e9a4",
+   "id": "020ba29d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9c472a7f",
+   "id": "098d883b",
    "metadata": {},
    "outputs": [
     {
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdf13d65",
+   "id": "b4686ac0",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00a306ad",
+   "id": "64af7da5",
    "metadata": {},
    "source": [
     "Represent each vocabulary item $w$ by a $|C|$-dimensional vector $\\phi(w)$, whose $c$’th coordinate is:\n",
@@ -678,7 +678,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aca79969",
+   "id": "1910d0d5",
    "metadata": {},
    "source": [
     "### Calculate `pointwise mutual information`"
@@ -687,7 +687,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "059b14b8",
+   "id": "463241a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "30ddd81c",
+   "id": "2f152271",
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20439362",
+   "id": "1f36e0b9",
    "metadata": {},
    "source": [
     "### Dimension Reduction\n",
@@ -916,7 +916,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4f73fb76",
+   "id": "cca9d415",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4530291c",
+   "id": "05de83d4",
    "metadata": {},
    "source": [
     "#### Here, we will be doing `Singular Value Decomposition`(SVD) to decompose the above sparse matrix to 100 dimension word representation."
@@ -1338,7 +1338,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "36dfd5f5",
+   "id": "abcaeca1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1349,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "fd3b7885",
+   "id": "2c08e6c5",
    "metadata": {
     "scrolled": true
    },
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cf1bd4b1",
+   "id": "1cf291ee",
    "metadata": {},
    "source": [
     "<br></br>"
@@ -1781,19 +1781,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb7651e4",
+   "id": "90e90920",
    "metadata": {},
    "source": [
     "## (b) `Nearest neighbor results`\n",
     "\n",
     "Pick a collection of $25$ words $w \\in V$.  For each $w$, return its nearest neighbor $w′\\neq w$ in $V$.  A popular distance measure to use for this is cosine distance:\n",
-    "$$1−\\frac{\\phi(w) \\dot \\phi(w′)}{\\left\\Vert\\phi(w)\\right\\Vert \\left\\Vert\\phi(w′)\\right\\Vert}$$"
+    "\n",
+    "$$1−\\frac{\\phi(w)\\phi(w′)}{\\left\\Vert\\phi(w)\\right\\Vert\\left\\Vert\\phi(w′)\\right\\Vert}$$"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "b24128ec",
+   "id": "bd5657a8",
    "metadata": {},
    "outputs": [
     {
@@ -2212,7 +2213,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "c3a3d56b",
+   "id": "8eceb493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2224,7 +2225,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "ca766aa9",
+   "id": "c91b7e09",
    "metadata": {},
    "outputs": [
     {
@@ -2259,7 +2260,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbe99988",
+   "id": "a4d118ce",
    "metadata": {},
    "source": [
     "As we can see from above, some of the nearest neighbors do make sense, like `cigarette -> smelled`, `africa -> asia`, `september -> december`,  `dictionary -> text` and `storm -> summer`."
