--- a/Coordinate_Descent/coordinate_descent.ipynb
+++ b/Coordinate_Descent/coordinate_descent.ipynb
@@ -30,7 +30,7 @@
    "id": "42843cb7",
    "metadata": {},
    "source": [
-    "In this mini-project we consider a standard `unconstrained optimization` problem on `heart disease data set`:\n",
+    "In this project, we consider a standard `unconstrained optimization` problem on `heart disease data set`:\n",
     "\n",
     "$$min L(w)$$\n",
     "\n",
@@ -228,7 +228,7 @@
    "id": "f61c81d5",
    "metadata": {},
    "source": [
-    "Begin by running a standard logistic regression solver(not regularized) on the training set. Make note of the final loss $L^∗$. "
+    "Begin by running a standard logistic regression solver(not regularized) on the training set. Make note of the final loss $L^*$. "
    ]
   },
   {
@@ -623,7 +623,7 @@
    "id": "277ad687",
    "metadata": {},
    "source": [
-    "The graph above shows how the loss of our \"adaptive\" coordinate descent algorithm's current iterate—that is, $L(w_t)$—decreases with $t$; it should asymptote to $L^∗$. Also, it shows the corresponding curve for random-feature coordinate descent."
+    "The graph above shows how the loss of our \"adaptive\" coordinate descent algorithm's current iterate—that is, $L(w_t)$—decreases with $t$; it should asymptote to $L^*$. Also, it shows the corresponding curve for random-feature coordinate descent."
    ]
   }
  ],
